fix: fix text overflowing in invite link

--- a/frontend/src/css/streamer.css
+++ b/frontend/src/css/streamer.css
@@ -34,6 +34,9 @@
     user-select: none;
     cursor: copy;
     transition: 200ms;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .inviteLink:hover {
